# OpenGL

./: CMakeLists.txt  OpenGL.sln
OpenGL/: OpenGL.vcxproj  main.cpp
include/: shader.h  timer.h
include/glad/: glad.h
src/: fragmentShader.frag  glad.c  main.cpp  timer.cpp  vertexShader.vert
